Fix some CSS issues on Firefox

--- a/src/styles/readmycards/reader-select.less
+++ b/src/styles/readmycards/reader-select.less
@@ -85,3 +85,18 @@
   }
 
 }
+
+@media screen and (-moz-images-in-menus:0) {
+  .reader-icon {
+    .index {
+      .card-bg {
+        .fa {
+          top: -2px;
+        }
+      }
+      .index-number {
+        top: -1px;
+      }
+    }
+  }
+}
